tried using datasource. has bug in url its making

--- a/aba.html
+++ b/aba.html
@@ -8,8 +8,6 @@
 <style type="text/css" media="screen">
 div#shell {
     border: 1px solid red;
-    height: 100%;
-    width: 100%;
 }
 </style>
 <div id="shell">
@@ -17,31 +15,34 @@ div#shell {
 </div>
 
 <script type="text/javascript" charset="utf-8">
-var i = 0;
-var jsonFlickrFeed = function (data) {
-    // @bug? Pass in array of urls, seems to trigger +1 - empty call
-    if( Y.Lang.isUndefined(data)) { return false; }
-    var items = data.items;
-    
-    return true;
+YUI().use("datasource", "datasource", function(Y) { //begin wrap
+
+var jsonFlickrFeed = function(e) {
+console.log(e);
 };
 
 var defaultArgs = ['id=35130544@N02','lang=en-us','format=json'];
-var baseFlickrUrl = 'http://api.flickr.com/services/feeds/photos_public.gne?'
-    + defaultArgs.join('&');
+var mDSConf = {
+    source: 'http://api.flickr.com/services/feeds/photos_public.gne?' + defaultArgs.join('&')
+};
+var myDataSource = new Y.DataSource.Get(mDSConf);
+myDataSource.set('scriptCallbackParam', "jsoncallback");
+var myCallback = {
+    success: function(e) {
+        alert('success');
+    }
+};
 
-var Y = YUI();
-var objTransaction = Y.Get.script([
-        baseFlickrUrl + "&tags=montreal",
-        baseFlickrUrl + "&tags=fireworks"
-    ], 
-    {
-        onSuccess: jsonFlickrFeed
-    });
-// 
-// $.getJSON(url, 
-//     jsonFlickrFeed);
+myDataSource.sendRequest({
+   request: "tags=montreal"
+});
 
+//end wrap
+});
+</script>
+
+
+<script type="text/javascript" charset="utf-8">
 </script>
 
     </body>
