--- a/aba.html
+++ b/aba.html
@@ -11,11 +11,16 @@ div#shell {
     height: 100%;
     width: 100%;
 }
+
+div#shell div {
+    border: 1px solid grey;
+    display: inline-block;
+}
+.hide {
+    display: none !important;
+}
 </style>
 <div id="shell">
-    <div id="foo">
-        
-    </div>
 </div>
 
 <script type="text/javascript" charset="utf-8">
@@ -29,11 +34,14 @@ jsonFlickrFeed = function (data) {
     var items = data.items;
 
     var container = Y.Node.create('<div id="montreal"></div>');
-    console.log(container);
-    Y.each(items, function(item) {
-        //fix the src
-        item['thumb_src'] = item.media.m;
-        var nodehtml = Y.substitute("<a href='{url}'><img src='{thumb_src}'></a><br>{title}<br>", item);
+    var randomIndex = Math.floor(Math.random()*items.length); //Can this be a bug? ever be == length?
+    Y.each(items, function(item, index) {
+        console.log(item);
+        item['thumb_src'] = item.media.m; //fix the src
+        item['image_src'] = item.media.m.replace('_m.jpg', '.jpg'); //fix the src
+        item['class'] = (index != randomIndex) ? "hide" : "show" ;
+        var nodehtml = Y.substitute(
+            "<div class={class}><a href='{image_src}'><img src='{thumb_src}'></a><br>{title}</div>", item);
         container.append(Y.Node.create(nodehtml));
     });
     Y.one('#shell').append(container);
