remove index. make TAG label clickable to show /hide collection

--- a/aba.html
+++ b/aba.html
@@ -81,6 +81,7 @@ jsonFlickrFeed = function (data) {
 
 Y.delegate('click', function(e) {
     e.halt();
+    this.ancestor().removeClass('index');
     this.ancestor().ancestor().get('children').removeClass('hide');
 }, 'div#shell', 'div.index a');
 
