ok, so the delegate wasnt working - turns out its a chrome error.

--- a/aba.html
+++ b/aba.html
@@ -80,9 +80,9 @@ jsonFlickrFeed = function (data) {
     return true;
 };
 
-Y.delegate( 'click', function(e) {
+Y.delegate('click', function(e) {
     console.log(e);
-}, 'div#shell div',  'h2');
+}, 'div#shell',  'h2');
 
 //Unhide the stack
 Y.delegate('click', function(e) {
