fixed styles so images are positioned as a stack. top level shouldnt be though. should also make it only apply to js

--- a/aba.html
+++ b/aba.html
@@ -8,11 +8,14 @@ div#shell {
     border: 1px solid red;
     height: 100%;
     width: 100%;
+    position:relative;
 }
 
+/*image item*/
 div#shell div {
     border: 1px solid grey;
     display: inline-block;
+    position:absolute;
     vertical-align: top;
 }
 
@@ -21,6 +24,7 @@ div#shell div h2{
     background-color: white;
     border: 1px solid yellow;
     position: absolute;
+    z-index: 1;
 }
 
 /*Picture Title*/
