switching to shadowbox

--- a/aba.html
+++ b/aba.html
@@ -109,5 +109,10 @@ var objTransaction = Y.Get.script([
 });
 </script>
 
-    </body>
+</body>
+<link rel="stylesheet" type="text/css" href="/shadowbox-build-3.0rc1/shadowbox.css">
+<script type="text/javascript" src="/shadowbox-build-3.0rc1/shadowbox.js"></script>
+<script type="text/javascript">
+Shadowbox.init();
+</script>
 </html>
