ok. so configs are just required. :P set it in .html.

--- a/aba.html
+++ b/aba.html
@@ -10,6 +10,12 @@
     
     <div id="shell">
     </div>
+    <script type="text/javascript" charset="utf-8">
+    //Set up your configs here. 
+    var abaConfig = YUI.namespace('flickr-site.config');
+    abaConfig.flickrUserName = 'amisoll';
+    abaConfig.flickrUserId ='35130544@N02';    
+    </script>
     <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
