move tags into config

--- a/aba.html
+++ b/aba.html
@@ -14,7 +14,8 @@
     //Set up your configs here. 
     var abaConfig = YUI.namespace('flickr-site.config');
     abaConfig.flickrUserName = 'amisoll';
-    abaConfig.flickrUserId ='35130544@N02';    
+    abaConfig.flickrUserId = '35130544@N02';    
+    abaConfig.tags = ['montreal', 'fireworks'];    
     </script>
     <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script>
 </body>
