everything working well. putting static content to play with styles a bit

--- a/aba.html
+++ b/aba.html
@@ -7,9 +7,10 @@
         <link rel="stylesheet" type="text/css" href="http://localhost/shadowbox-3.0.2/shadowbox.css">
     </head>
 <body>
-    
     <div id="shell">
-    </div>
+        <div id="montreal"><h2>montreal</h2><div class="index"><a href="http://farm4.static.flickr.com/3319/3314187911_22aa0eeb0d_b.jpg" title="montreal"><img src="http://farm4.static.flickr.com/3319/3314187911_22aa0eeb0d_m.jpg"></a><span>montreal</span></div></div><div id="fireworks"><h2>fireworks</h2><div class="index"><a href="http://farm4.static.flickr.com/3664/3477396781_14e924f3ed_b.jpg" title="fireworks"><img src="http://farm4.static.flickr.com/3664/3477396781_14e924f3ed_m.jpg"></a><span>fireworks</span></div></div></div>
+    <!-- <div id="shell">
+    </div> -->
     <script type="text/javascript" charset="utf-8">
     //Set up your configs here. 
     var abaConfig = YUI.namespace('flickr-site.config');
@@ -17,6 +18,6 @@
     abaConfig.flickrUserId = '35130544@N02';    
     abaConfig.tags = ['montreal', 'fireworks'];    
     </script>
-    <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script>
+    <!-- <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script> -->
 </body>
 </html>
