--- a/aba.html
+++ b/aba.html
@@ -4,7 +4,7 @@
         <title></title>
         <script src="http://yui.yahooapis.com/3.0.0/build/yui/yui-min.js"></script>
         <link rel="stylesheet" href="aba.css" type="text/css" media="screen" title="no title" charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="http://localhost/shadowbox-3.0.2/shadowbox.css">
+        <link rel="stylesheet" type="text/css" href="/shadowbox-3.0.2/shadowbox.css">
     </head>
 <body>
     <!-- <div id="shell"><div id="montreal"><h2>montreal</h2><div class="index"><a href="http://farm4.static.flickr.com/3319/3314187911_22aa0eeb0d_b.jpg" title="montreal"><img src="http://farm4.static.flickr.com/3319/3314187911_22aa0eeb0d_m.jpg"></a><span>montreal</span></div></div><div id="fireworks"><h2>fireworks</h2><div class="index"><a href="http://farm4.static.flickr.com/3664/3477396781_14e924f3ed_b.jpg" title="fireworks"><img src="http://farm4.static.flickr.com/3664/3477396781_14e924f3ed_m.jpg"></a><span>fireworks</span></div></div></div> -->
