--- a/aba.html
+++ b/aba.html
@@ -8,15 +8,80 @@
     </head>
 <body>
     <!-- <div id="shell"><div id="montreal"><h2>montreal</h2><div class="index"><a href="http://farm4.static.flickr.com/3319/3314187911_22aa0eeb0d_b.jpg" title="montreal"><img src="http://farm4.static.flickr.com/3319/3314187911_22aa0eeb0d_m.jpg"></a><span>montreal</span></div></div><div id="fireworks"><h2>fireworks</h2><div class="index"><a href="http://farm4.static.flickr.com/3664/3477396781_14e924f3ed_b.jpg" title="fireworks"><img src="http://farm4.static.flickr.com/3664/3477396781_14e924f3ed_m.jpg"></a><span>fireworks</span></div></div></div> -->
+<div id="shell">
+    <div id="lighthouse">
+        <h2>
+            lighthouse
+        </h2>
+        <h3>
+            5
+        </h3>
+        <div class="index">
+            <a title="lighthouse" href="http://farm4.static.flickr.com/3419/3313036432_e1ee3c7e38_b.jpg"><img src="http://farm4.static.flickr.com/3419/3313036432_e1ee3c7e38_m.jpg"></a><span>lighthouse</span>
+        </div>
+    </div>
+    <div id="night">
+        <h2>
+            night
+        </h2>
+        <h3>
+            9
+        </h3>
+        <div class="index">
+            <a title="night" href="http://farm3.static.flickr.com/2461/3539779834_b25284a8df_b.jpg"><img src="http://farm3.static.flickr.com/2461/3539779834_b25284a8df_m.jpg"></a><span>night</span>
+        </div>
+    </div>
+    <div id="israel">
+        <h2>
+            israel
+        </h2>
+        <h3>
+            5
+        </h3>
+        <div class="index">
+            <a title="israel" href="http://farm3.static.flickr.com/2441/3843449983_92e1d57989_b.jpg"><img src="http://farm3.static.flickr.com/2441/3843449983_92e1d57989_m.jpg"></a><span>israel</span>
+        </div>
+    </div>
+    <div id="fireworks">
+        <h2>
+            fireworks
+        </h2>
+        <h3>
+            16
+        </h3>
+        <div class="index">
+            <a title="fireworks" href="http://farm4.static.flickr.com/3361/3477389537_ea68c56bcb_b.jpg"><img src="http://farm4.static.flickr.com/3361/3477389537_ea68c56bcb_m.jpg"></a><span>fireworks</span>
+        </div>
+    </div>
+    <div id="montreal">
+        <h2>
+            montreal
+        </h2>
+        <h3>
+            20
+        </h3>
+        <div class="index">
+            <a title="montreal" href="http://farm3.static.flickr.com/2461/3539779834_b25284a8df_b.jpg"><img src="http://farm3.static.flickr.com/2461/3539779834_b25284a8df_m.jpg"></a><span>montreal</span>
+        </div>
+    </div>
+    <div id="thumbs"></div>
+    <div id="thumbs"></div>
+    <div id="thumbs"></div>
+    <div id="thumbs"></div>
+    <div id="thumbs"></div>
+</div>
+
     <div id="shell">
+        
+
     </div>
     <script type="text/javascript" charset="utf-8">
     //Set up your configs here. 
     var abaConfig = YUI.namespace('flickr-site.config');
     abaConfig.flickrUserName = 'amisoll';
     abaConfig.flickrUserId = '35130544@N02';    
-    abaConfig.tags = ['montreal', 'fireworks', 'israel', 'night', 'lighthouse'];    
+    abaConfig.tags = ['montreal', 'fireworks', 'israel', 'night', 'lighthouse'];
     </script>
-    <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script>
+    <!-- // <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script> -->
 </body>
 </html>
