put fresh stub html add dev.css

--- a/aba.html
+++ b/aba.html
@@ -5,9 +5,9 @@
         <script src="http://yui.yahooapis.com/3.0.0/build/yui/yui-min.js"></script>
         <link rel="stylesheet" href="aba.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" type="text/css" href="/shadowbox-3.0.2/shadowbox.css">
+        <!-- Skin -->
     </head>
 <body>
-    <!-- <div id="shell"><div id="montreal"><h2>montreal</h2><div class="index"><a href="http://farm4.static.flickr.com/3319/3314187911_22aa0eeb0d_b.jpg" title="montreal"><img src="http://farm4.static.flickr.com/3319/3314187911_22aa0eeb0d_m.jpg"></a><span>montreal</span></div></div><div id="fireworks"><h2>fireworks</h2><div class="index"><a href="http://farm4.static.flickr.com/3664/3477396781_14e924f3ed_b.jpg" title="fireworks"><img src="http://farm4.static.flickr.com/3664/3477396781_14e924f3ed_m.jpg"></a><span>fireworks</span></div></div></div> -->
 <div id="shell">
     <div id="lighthouse">
         <h2>
@@ -28,7 +28,7 @@
             9
         </h3>
         <div class="index">
-            <a title="night" href="http://farm3.static.flickr.com/2461/3539779834_b25284a8df_b.jpg"><img src="http://farm3.static.flickr.com/2461/3539779834_b25284a8df_m.jpg"></a><span>night</span>
+            <a title="night" href="http://farm3.static.flickr.com/2225/3539776858_d4f82d714c_b.jpg"><img src="http://farm3.static.flickr.com/2225/3539776858_d4f82d714c_m.jpg"></a><span>night</span>
         </div>
     </div>
     <div id="israel">
@@ -65,23 +65,14 @@
         </div>
     </div>
     <div id="thumbs"></div>
-    <div id="thumbs"></div>
-    <div id="thumbs"></div>
-    <div id="thumbs"></div>
-    <div id="thumbs"></div>
 </div>
-
-    <div id="shell">
-        
-
-    </div>
-    <script type="text/javascript" charset="utf-8">
+<script type="text/javascript" charset="utf-8">
     //Set up your configs here. 
     var abaConfig = YUI.namespace('flickr-site.config');
     abaConfig.flickrUserName = 'amisoll';
     abaConfig.flickrUserId = '35130544@N02';    
-    abaConfig.tags = ['montreal', 'fireworks', 'israel', 'night', 'lighthouse'];
+    abaConfig.tags = ['montreal', 'fireworks', 'israel', 'night', 'lighthouse'];    
     </script>
-    <!-- // <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script> -->
+    <!-- <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script> -->
 </body>
 </html>
