--- a/aba.html
+++ b/aba.html
@@ -15,7 +15,7 @@
     var abaConfig = YUI.namespace('flickr-site.config');
     abaConfig.flickrUserName = 'amisoll';
     abaConfig.flickrUserId = '35130544@N02';    
-    abaConfig.tags = ['montreal', 'fireworks'];
+    abaConfig.tags = ['montreal', 'fireworks','israel','night','lighthouse'];
     </script>
     <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script>
     
