change some classes for clarity

--- a/aba.html
+++ b/aba.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <script src="http://yui.yahooapis.com/3.0.0/build/yui/yui-min.js"></script>
-        <link rel="stylesheet" href="aba.css" type="text/css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="dev.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" type="text/css" href="/shadowbox-3.0.2/shadowbox.css">
         <!-- Skin -->
     </head>
@@ -16,7 +16,7 @@
     abaConfig.flickrUserName = 'amisoll';
     abaConfig.flickrUserId = '35130544@N02';    
     abaConfig.tags = [
-    'montreal', 'fireworks','israel','lighthouse',
+    // 'montreal', 'fireworks','israel','lighthouse',
     'night'];
     </script>
     <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script>
