default minimal looking much better

--- a/aba.html
+++ b/aba.html
@@ -16,7 +16,7 @@
     abaConfig.flickrUserName = 'amisoll';
     abaConfig.flickrUserId = '35130544@N02';    
     abaConfig.tags = [
-    // 'montreal', 'fireworks','israel','lighthouse',
+    'montreal', 'fireworks','israel','lighthouse',
     'night'];
     </script>
     <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script>
