Added functionality to specify pic size, since not all people have big pics.
Added example ncbeets page

--- a/ncbeets.html
+++ b/ncbeets.html
@@ -12,13 +12,13 @@
 </div>
 <script type="text/javascript" charset="utf-8">
     //Set up your configs here. 
+    // @todo Add option to set whether to use BIG or NOT - ie: in nancy's, you shouldnt
     var abaConfig = YUI.namespace('flickr-site.config');
-    abaConfig.flickrUserName = 'amisoll';
-    abaConfig.flickrUserId = '35130544@N02';    
-    abaConfig.pictureSize = '_b'; //default is normal
+    abaConfig.flickrUserName = 'ncbeets';
+    abaConfig.flickrUserId = '96912114@N00';
     abaConfig.tags = [
-   // 'montreal', 'fireworks','israel',
-    'lighthouse','night'];
+    'montreal','Newfoundland', 'sun', 'sunset', 'downtown', 'bike', 'orange'
+    ];
     </script>
     <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script>
     
