adding new config - galleryThumbsPerRow we'll use that to calculate width of gallery overlay.

--- a/aba.html
+++ b/aba.html
@@ -15,7 +15,8 @@
     var abaConfig = YUI.namespace('flickr-site.config');
     abaConfig.flickrUserName = 'amisoll';
     abaConfig.flickrUserId = '35130544@N02';    
-    abaConfig.pictureSize = '_b'; //default is normal
+    abaConfig.galleryThumbsPerRow = 5;
+    abaConfig.pictureSize = '_b'; //default is normal, _b for big
     abaConfig.tags = [
    // 'montreal', 'fireworks','israel',
     'lighthouse','night'];
